87~ 省略　92~高さ指定の変更

--- a/app/assets/stylesheets/_groups.scss
+++ b/app/assets/stylesheets/_groups.scss
@@ -84,12 +84,8 @@
     }
   }
   &__chat--contents{
-    position: absolute;
-    top:100px;
-    right:0;
-    left: 300px;  
     background-color: #fafafa;
-    height:calc(100vh - 190px);
+    height:150px;
     padding: 46px 40px;
     overflow: scroll; 
     .chat-message{
