メインコンテンツのグループメッセージ高さ変更

--- a/app/assets/stylesheets/_groups.scss
+++ b/app/assets/stylesheets/_groups.scss
@@ -85,7 +85,7 @@
   }
   &__chat--contents{
     background-color: #fafafa;
-    height:150px;
+    height: calc(100vh - 190px);
     padding: 46px 40px;
     overflow: scroll; 
     .chat-message{
