--- a/app/assets/stylesheets/_groups.scss
+++ b/app/assets/stylesheets/_groups.scss
@@ -121,10 +121,9 @@
     .input-box {
       position: relative;
       height: 50px; 
-      width: 100%;
       &--text{
         height: 50px;
-        width: calc(100% - 200px);
+        width: 720px;
         padding: 0 40px 0 10px;
         background-color: white;
         border-style: none;
@@ -136,10 +135,9 @@
       &--image {
         font-size: 1.3rem;
         position: absolute;
-        top: 2.5px;
-        right: 10px;
+        top: 10px;
+        left: 740px;
         cursor: pointer; 
-        
       }
       &--submit {
         height: 50px;
